--- a/LiveChat_app/templates/html/chat_box/load_conv_area.html
+++ b/LiveChat_app/templates/html/chat_box/load_conv_area.html
@@ -3,11 +3,11 @@
 {% load humanize %}
 
 {% for chats in chats_data %}
-    <div class="msg  online "  onclick="open_chat_area('{{chats.chat_box_id}}',this)">
+    <div class="msg  "  onclick="open_chat_area('{{chats.chat_box_id}}',this)"><!-- class online -->
         {% if chats.img %}
         <img class="msg-profile" src="{{ chats.img.url }}" alt="" />
         {% else %}
-        <i class="msg-profile bx bx-user"></i>
+        <i class="msg-profile bx bx-user bx-lg"></i>
         {% endif %}
 
         <div class="msg-detail" >
