--- a/LiveChat_app/templates/html/home.html
+++ b/LiveChat_app/templates/html/home.html
@@ -24,6 +24,7 @@
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
+    <script>let chatSocket;</script>
 
     <style>
       .a_btn{
@@ -52,6 +53,7 @@
     open_chat_area(email);
   }
 </script>
+
 <body onload="load_conv_areaD('C1ktLHb2Fu')">
 
   <div style="">
